--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -4,6 +4,8 @@
   "description": "App for storing and viewing phone numbers of contacts.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,11 @@
     "database"
   ],
   "author": "Juho Timonen",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
