--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -22,7 +22,8 @@
   "author": "Juho Timonen",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
