--- a/part4/bloglist-backend/package.json
+++ b/part4/bloglist-backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.24"
+    "mongoose": "^5.9.24",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.4.0",
     "nodemon": "^2.0.4"
   }
 }
