add first backend tests

--- a/part4/bloglist-backend/package.json
+++ b/part4/bloglist-backend/package.json
@@ -4,10 +4,10 @@
   "description": "Backend for an app where users can store info about interesting blogs in the Internet.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,10 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0"
@@ -30,7 +32,8 @@
   "devDependencies": {
     "eslint": "^7.5.0",
     "jest": "^26.1.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node"
