--- a/part4/bloglist-backend/package.json
+++ b/part4/bloglist-backend/package.json
@@ -20,13 +20,17 @@
   "author": "Juho Timonen",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
-    "morgan": "^1.10.0"
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
+    "set-value": "^3.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
